--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .idea/
 target/
+.mvn/
+workingdiarys.iml
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
