--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.continue-on-error = false
 spring.datasource.url = jdbc:mysql://localhost:3306/workingdiary?serverTimezone=GMT%2B8
 spring.datasource.username = root
 spring.datasource.password = root@123
+
+#≈‰÷√mybatis
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.config-location=classpath:config/mybatis-config.xml
+mybatis.type-aliases-package=com.iscas.workingdiary.entity
