--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,17 @@ spring.datasource.password = root@123
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.config-location=classpath:config/mybatis-config.xml
 mybatis.type-aliases-package=com.iscas.workingdiary.entity
+
+#≈‰÷√redis
+spring.redis.host=192.168.100.174
+spring.redis.port=6379
+spring.redis.password=vic@123
+spring.redis.database=0
+spring.redis.jedis.pool.max-active=10
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.min-idle=1
+spring.redis.timeout=1000ms
+#spring.redis.pool.maxTotal=8
+#spring.redis.pool.maxWaitMillis=1000
+#spring.redis.testOnBorrow=true
