--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,20 @@ spring.redis.timeout=1000ms
 #spring.redis.pool.maxTotal=8
 #spring.redis.pool.maxWaitMillis=1000
 #spring.redis.testOnBorrow=true
+
+#配置activemq
+#通过触发器，去控制什么时候进行热加载部署新的文件
+#spring.devtools.restart.trigger-file=trigger.txt
+#自定义启动banner文件的路径
+#spring.banner.location=banner.txt
+#整合jms测试，安装在别的机器，防火墙和端口号记得开放
+spring.activemq.broker-url=tcp://127.0.0.1:61616
+#集群配置
+#spring.activemq.broker-url=failover:(tcp://localhost:61616,tcp://localhost:61617)
+spring.activemq.user=admin
+spring.activemq.password=admin
+#下列配置要增加依赖
+spring.activemq.pool.enabled=true
+spring.activemq.pool.max-connections=10
+#default point to point
+# spring.jms.pub-sub-domain=true
