--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,14 @@
             <version>0.9.0</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.59</version>
+        </dependency>
+
     </dependencies>
 
     <build>
