完成用户注册接口，注册时根据用户填写信息选择自动生成用户证书

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,7 @@ spring.activemq.pool.enabled=true
 spring.activemq.pool.max-connections=10
 #default point to point
 # spring.jms.pub-sub-domain=true
+
+#≈‰÷√RepChainœ‡πÿ
+jks.path=F:/workingdiarys/user/jks
+cer.path=F:/workingdiarys/user/cer
