--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 target/
 .mvn/
 workingdiarys.iml
+user/
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
